--- a/HR-build/Makefile
+++ b/HR-build/Makefile
@@ -65,38 +65,6 @@ CMAKE_BINARY_DIR = /Users/theojanson/Project/McGillPhysics/HelixRich/Code/Applic
 #=============================================================================
 # Targets provided globally by CMake.
 
-# Special rule for the target install/local
-install/local: preinstall
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
-	/usr/local/Cellar/cmake/3.20.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
-.PHONY : install/local
-
-# Special rule for the target install/local
-install/local/fast: preinstall/fast
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
-	/usr/local/Cellar/cmake/3.20.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
-.PHONY : install/local/fast
-
-# Special rule for the target rebuild_cache
-rebuild_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake to regenerate build system..."
-	/usr/local/Cellar/cmake/3.20.2/bin/cmake --regenerate-during-build -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
-.PHONY : rebuild_cache
-
-# Special rule for the target rebuild_cache
-rebuild_cache/fast: rebuild_cache
-.PHONY : rebuild_cache/fast
-
-# Special rule for the target edit_cache
-edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
-	/usr/local/Cellar/cmake/3.20.2/bin/ccmake -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
-.PHONY : edit_cache
-
-# Special rule for the target edit_cache
-edit_cache/fast: edit_cache
-.PHONY : edit_cache/fast
-
 # Special rule for the target install/strip
 install/strip: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing the project stripped..."
@@ -130,6 +98,38 @@ list_install_components:
 list_install_components/fast: list_install_components
 .PHONY : list_install_components/fast
 
+# Special rule for the target rebuild_cache
+rebuild_cache:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake to regenerate build system..."
+	/usr/local/Cellar/cmake/3.20.2/bin/cmake --regenerate-during-build -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+.PHONY : rebuild_cache
+
+# Special rule for the target rebuild_cache
+rebuild_cache/fast: rebuild_cache
+.PHONY : rebuild_cache/fast
+
+# Special rule for the target edit_cache
+edit_cache:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
+	/usr/local/Cellar/cmake/3.20.2/bin/ccmake -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+.PHONY : edit_cache
+
+# Special rule for the target edit_cache
+edit_cache/fast: edit_cache
+.PHONY : edit_cache/fast
+
+# Special rule for the target install/local
+install/local: preinstall
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
+	/usr/local/Cellar/cmake/3.20.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
+.PHONY : install/local
+
+# Special rule for the target install/local
+install/local/fast: preinstall/fast
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
+	/usr/local/Cellar/cmake/3.20.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
+.PHONY : install/local/fast
+
 # The main all target
 all: cmake_check_build_system
 	$(CMAKE_COMMAND) -E cmake_progress_start /Users/theojanson/Project/McGillPhysics/HelixRich/Code/Applications/HelixRich/HR-build/CMakeFiles /Users/theojanson/Project/McGillPhysics/HelixRich/Code/Applications/HelixRich/HR-build//CMakeFiles/progress.marks
@@ -162,24 +162,48 @@ depend:
 .PHONY : depend
 
 #=============================================================================
-# Target rules for targets named tutorial
+# Target rules for targets named rich
 
 # Build rule for target.
-tutorial: cmake_check_build_system
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 tutorial
-.PHONY : tutorial
+rich: cmake_check_build_system
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 rich
+.PHONY : rich
 
 # fast build rule for target.
-tutorial/fast:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/build
-.PHONY : tutorial/fast
+rich/fast:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/build
+.PHONY : rich/fast
+
+rich.o: rich.cpp.o
+.PHONY : rich.o
+
+# target to build an object file
+rich.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/rich.cpp.o
+.PHONY : rich.cpp.o
+
+rich.i: rich.cpp.i
+.PHONY : rich.i
+
+# target to preprocess a source file
+rich.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/rich.cpp.i
+.PHONY : rich.cpp.i
+
+rich.s: rich.cpp.s
+.PHONY : rich.s
+
+# target to generate assembly for a file
+rich.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/rich.cpp.s
+.PHONY : rich.cpp.s
 
 src/DetectorConstruction.o: src/DetectorConstruction.cpp.o
 .PHONY : src/DetectorConstruction.o
 
 # target to build an object file
 src/DetectorConstruction.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/DetectorConstruction.cpp.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/DetectorConstruction.cpp.o
 .PHONY : src/DetectorConstruction.cpp.o
 
 src/DetectorConstruction.i: src/DetectorConstruction.cpp.i
@@ -187,7 +211,7 @@ src/DetectorConstruction.i: src/DetectorConstruction.cpp.i
 
 # target to preprocess a source file
 src/DetectorConstruction.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/DetectorConstruction.cpp.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/DetectorConstruction.cpp.i
 .PHONY : src/DetectorConstruction.cpp.i
 
 src/DetectorConstruction.s: src/DetectorConstruction.cpp.s
@@ -195,15 +219,39 @@ src/DetectorConstruction.s: src/DetectorConstruction.cpp.s
 
 # target to generate assembly for a file
 src/DetectorConstruction.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/DetectorConstruction.cpp.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/DetectorConstruction.cpp.s
 .PHONY : src/DetectorConstruction.cpp.s
+
+src/EventAction.o: src/EventAction.cpp.o
+.PHONY : src/EventAction.o
+
+# target to build an object file
+src/EventAction.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/EventAction.cpp.o
+.PHONY : src/EventAction.cpp.o
+
+src/EventAction.i: src/EventAction.cpp.i
+.PHONY : src/EventAction.i
+
+# target to preprocess a source file
+src/EventAction.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/EventAction.cpp.i
+.PHONY : src/EventAction.cpp.i
+
+src/EventAction.s: src/EventAction.cpp.s
+.PHONY : src/EventAction.s
+
+# target to generate assembly for a file
+src/EventAction.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/EventAction.cpp.s
+.PHONY : src/EventAction.cpp.s
 
 src/PhysicsList.o: src/PhysicsList.cpp.o
 .PHONY : src/PhysicsList.o
 
 # target to build an object file
 src/PhysicsList.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PhysicsList.cpp.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PhysicsList.cpp.o
 .PHONY : src/PhysicsList.cpp.o
 
 src/PhysicsList.i: src/PhysicsList.cpp.i
@@ -211,7 +259,7 @@ src/PhysicsList.i: src/PhysicsList.cpp.i
 
 # target to preprocess a source file
 src/PhysicsList.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PhysicsList.cpp.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PhysicsList.cpp.i
 .PHONY : src/PhysicsList.cpp.i
 
 src/PhysicsList.s: src/PhysicsList.cpp.s
@@ -219,7 +267,7 @@ src/PhysicsList.s: src/PhysicsList.cpp.s
 
 # target to generate assembly for a file
 src/PhysicsList.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PhysicsList.cpp.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PhysicsList.cpp.s
 .PHONY : src/PhysicsList.cpp.s
 
 src/PrimaryGeneratorAction.o: src/PrimaryGeneratorAction.cpp.o
@@ -227,7 +275,7 @@ src/PrimaryGeneratorAction.o: src/PrimaryGeneratorAction.cpp.o
 
 # target to build an object file
 src/PrimaryGeneratorAction.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PrimaryGeneratorAction.cpp.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PrimaryGeneratorAction.cpp.o
 .PHONY : src/PrimaryGeneratorAction.cpp.o
 
 src/PrimaryGeneratorAction.i: src/PrimaryGeneratorAction.cpp.i
@@ -235,7 +283,7 @@ src/PrimaryGeneratorAction.i: src/PrimaryGeneratorAction.cpp.i
 
 # target to preprocess a source file
 src/PrimaryGeneratorAction.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PrimaryGeneratorAction.cpp.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PrimaryGeneratorAction.cpp.i
 .PHONY : src/PrimaryGeneratorAction.cpp.i
 
 src/PrimaryGeneratorAction.s: src/PrimaryGeneratorAction.cpp.s
@@ -243,15 +291,111 @@ src/PrimaryGeneratorAction.s: src/PrimaryGeneratorAction.cpp.s
 
 # target to generate assembly for a file
 src/PrimaryGeneratorAction.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/PrimaryGeneratorAction.cpp.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/PrimaryGeneratorAction.cpp.s
 .PHONY : src/PrimaryGeneratorAction.cpp.s
+
+src/RunAction.o: src/RunAction.cpp.o
+.PHONY : src/RunAction.o
+
+# target to build an object file
+src/RunAction.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/RunAction.cpp.o
+.PHONY : src/RunAction.cpp.o
+
+src/RunAction.i: src/RunAction.cpp.i
+.PHONY : src/RunAction.i
+
+# target to preprocess a source file
+src/RunAction.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/RunAction.cpp.i
+.PHONY : src/RunAction.cpp.i
+
+src/RunAction.s: src/RunAction.cpp.s
+.PHONY : src/RunAction.s
+
+# target to generate assembly for a file
+src/RunAction.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/RunAction.cpp.s
+.PHONY : src/RunAction.cpp.s
+
+src/SimulationConstants.o: src/SimulationConstants.cpp.o
+.PHONY : src/SimulationConstants.o
+
+# target to build an object file
+src/SimulationConstants.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SimulationConstants.cpp.o
+.PHONY : src/SimulationConstants.cpp.o
+
+src/SimulationConstants.i: src/SimulationConstants.cpp.i
+.PHONY : src/SimulationConstants.i
+
+# target to preprocess a source file
+src/SimulationConstants.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SimulationConstants.cpp.i
+.PHONY : src/SimulationConstants.cpp.i
+
+src/SimulationConstants.s: src/SimulationConstants.cpp.s
+.PHONY : src/SimulationConstants.s
+
+# target to generate assembly for a file
+src/SimulationConstants.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SimulationConstants.cpp.s
+.PHONY : src/SimulationConstants.cpp.s
+
+src/StackingAction.o: src/StackingAction.cpp.o
+.PHONY : src/StackingAction.o
+
+# target to build an object file
+src/StackingAction.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/StackingAction.cpp.o
+.PHONY : src/StackingAction.cpp.o
+
+src/StackingAction.i: src/StackingAction.cpp.i
+.PHONY : src/StackingAction.i
+
+# target to preprocess a source file
+src/StackingAction.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/StackingAction.cpp.i
+.PHONY : src/StackingAction.cpp.i
+
+src/StackingAction.s: src/StackingAction.cpp.s
+.PHONY : src/StackingAction.s
+
+# target to generate assembly for a file
+src/StackingAction.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/StackingAction.cpp.s
+.PHONY : src/StackingAction.cpp.s
+
+src/SteppingAction.o: src/SteppingAction.cpp.o
+.PHONY : src/SteppingAction.o
+
+# target to build an object file
+src/SteppingAction.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SteppingAction.cpp.o
+.PHONY : src/SteppingAction.cpp.o
+
+src/SteppingAction.i: src/SteppingAction.cpp.i
+.PHONY : src/SteppingAction.i
+
+# target to preprocess a source file
+src/SteppingAction.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SteppingAction.cpp.i
+.PHONY : src/SteppingAction.cpp.i
+
+src/SteppingAction.s: src/SteppingAction.cpp.s
+.PHONY : src/SteppingAction.s
+
+# target to generate assembly for a file
+src/SteppingAction.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/SteppingAction.cpp.s
+.PHONY : src/SteppingAction.cpp.s
 
 src/TrackerHit.o: src/TrackerHit.cpp.o
 .PHONY : src/TrackerHit.o
 
 # target to build an object file
 src/TrackerHit.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerHit.cpp.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerHit.cpp.o
 .PHONY : src/TrackerHit.cpp.o
 
 src/TrackerHit.i: src/TrackerHit.cpp.i
@@ -259,7 +403,7 @@ src/TrackerHit.i: src/TrackerHit.cpp.i
 
 # target to preprocess a source file
 src/TrackerHit.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerHit.cpp.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerHit.cpp.i
 .PHONY : src/TrackerHit.cpp.i
 
 src/TrackerHit.s: src/TrackerHit.cpp.s
@@ -267,7 +411,7 @@ src/TrackerHit.s: src/TrackerHit.cpp.s
 
 # target to generate assembly for a file
 src/TrackerHit.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerHit.cpp.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerHit.cpp.s
 .PHONY : src/TrackerHit.cpp.s
 
 src/TrackerSD.o: src/TrackerSD.cpp.o
@@ -275,7 +419,7 @@ src/TrackerSD.o: src/TrackerSD.cpp.o
 
 # target to build an object file
 src/TrackerSD.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerSD.cpp.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerSD.cpp.o
 .PHONY : src/TrackerSD.cpp.o
 
 src/TrackerSD.i: src/TrackerSD.cpp.i
@@ -283,7 +427,7 @@ src/TrackerSD.i: src/TrackerSD.cpp.i
 
 # target to preprocess a source file
 src/TrackerSD.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerSD.cpp.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerSD.cpp.i
 .PHONY : src/TrackerSD.cpp.i
 
 src/TrackerSD.s: src/TrackerSD.cpp.s
@@ -291,32 +435,8 @@ src/TrackerSD.s: src/TrackerSD.cpp.s
 
 # target to generate assembly for a file
 src/TrackerSD.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/src/TrackerSD.cpp.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/rich.dir/build.make CMakeFiles/rich.dir/src/TrackerSD.cpp.s
 .PHONY : src/TrackerSD.cpp.s
-
-tutorial.o: tutorial.cpp.o
-.PHONY : tutorial.o
-
-# target to build an object file
-tutorial.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/tutorial.cpp.o
-.PHONY : tutorial.cpp.o
-
-tutorial.i: tutorial.cpp.i
-.PHONY : tutorial.i
-
-# target to preprocess a source file
-tutorial.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/tutorial.cpp.i
-.PHONY : tutorial.cpp.i
-
-tutorial.s: tutorial.cpp.s
-.PHONY : tutorial.s
-
-# target to generate assembly for a file
-tutorial.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/tutorial.dir/build.make CMakeFiles/tutorial.dir/tutorial.cpp.s
-.PHONY : tutorial.cpp.s
 
 # Help Target
 help:
@@ -330,25 +450,40 @@ help:
 	@echo "... install/strip"
 	@echo "... list_install_components"
 	@echo "... rebuild_cache"
-	@echo "... tutorial"
+	@echo "... rich"
+	@echo "... rich.o"
+	@echo "... rich.i"
+	@echo "... rich.s"
 	@echo "... src/DetectorConstruction.o"
 	@echo "... src/DetectorConstruction.i"
 	@echo "... src/DetectorConstruction.s"
+	@echo "... src/EventAction.o"
+	@echo "... src/EventAction.i"
+	@echo "... src/EventAction.s"
 	@echo "... src/PhysicsList.o"
 	@echo "... src/PhysicsList.i"
 	@echo "... src/PhysicsList.s"
 	@echo "... src/PrimaryGeneratorAction.o"
 	@echo "... src/PrimaryGeneratorAction.i"
 	@echo "... src/PrimaryGeneratorAction.s"
+	@echo "... src/RunAction.o"
+	@echo "... src/RunAction.i"
+	@echo "... src/RunAction.s"
+	@echo "... src/SimulationConstants.o"
+	@echo "... src/SimulationConstants.i"
+	@echo "... src/SimulationConstants.s"
+	@echo "... src/StackingAction.o"
+	@echo "... src/StackingAction.i"
+	@echo "... src/StackingAction.s"
+	@echo "... src/SteppingAction.o"
+	@echo "... src/SteppingAction.i"
+	@echo "... src/SteppingAction.s"
 	@echo "... src/TrackerHit.o"
 	@echo "... src/TrackerHit.i"
 	@echo "... src/TrackerHit.s"
 	@echo "... src/TrackerSD.o"
 	@echo "... src/TrackerSD.i"
 	@echo "... src/TrackerSD.s"
-	@echo "... tutorial.o"
-	@echo "... tutorial.i"
-	@echo "... tutorial.s"
 .PHONY : help
 
 
