--- a/HR/CMakeLists.txt
+++ b/HR/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 # Setup Project
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-project(tutorial)
+project(rich)
 
 # Find Geant4 and activate ALL UI and vis drivers by default
 option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" OFF)
@@ -21,20 +21,20 @@ file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cpp)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 
 # Add exec and links the libraries
-add_executable(tutorial tutorial.cpp ${sources} ${headers})
-target_link_libraries(tutorial ${Geant4_LIBRARIES})
+add_executable(rich rich ${sources} ${headers})
+target_link_libraries(rich ${Geant4_LIBRARIES})
 
 # if you want to copy scripts over uncomment this section
-# set(TUTORIAL_SCRIPTS
-#   tutorial.in
-#   tutorial.out
+# set(RICH_SCRIPTS
+#   rich.in
+#   rich.out
 #   init_vis.mac
 #   run1.mac
 #   run2.mac
 #   vis.mac
 #   )
 # 
-# foreach(_script ${TUTORIAL_SCRIPTS})
+# foreach(_script ${RICH_SCRIPTS})
 #   configure_file(
 #     ${PROJECT_SOURCE_DIR}/${_script}
 #     ${PROJECT_BINARY_DIR}/${_script}
@@ -43,4 +43,4 @@ target_link_libraries(tutorial ${Geant4_LIBRARIES})
 # endforeach()
 
 # Install exec's to bin directory under CMAKE_INSTALL_PREFIX
-install(TARGETS tutorial DESTINATION bin)
+install(TARGETS rich DESTINATION bin)
